--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,19 @@
 
         <p style="display: none;">{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.show_downloads %}
+        <h4>Télécharger le logo</h4>
+
         <ul class="downloads">
-          <li><a download href="https://raw.githubusercontent.com/FNEIR/fneir.github.io/main/logos/Logo-FNEIR-Rect.png">Télécharger <strong>Logo PNG</strong></a></li>
-          <li><a download href="https://raw.githubusercontent.com/FNEIR/fneir.github.io/main/logos/Logo-FNEIR-Rect.min.svg">Télécharger <strong>Logo SVG</strong></a></li>
-          <li><a href="https://github.com/FNEIR/fneir.github.io/tree/main/logos">Voir <strong>Autres logos</strong></a></li>
+          <li><a download href="https://raw.githubusercontent.com/FNEIR/fneir.github.io/main/logos/Logo-FNEIR-Rect.png">Télécharger <strong  style="font-size: 12px; margin-top: 4px;">Logo PNG</strong></a></li>
+          <li><a download href="https://raw.githubusercontent.com/FNEIR/fneir.github.io/main/logos/Logo-FNEIR-Rect.min.svg">Télécharger <strong  style="font-size: 12px; margin-top: 4px;">Logo SVG</strong></a></li>
+          <li><a href="https://github.com/FNEIR/fneir.github.io/tree/main/logos">Voir <strong style="font-size: 10px; margin-top: 4px;">Autres logos</strong></a></li>
         </ul>
-        {% endif %}
+
+        <h4>Contact</h4>
+        <ul>
+            <li>Tchat Discord : <a href="https://discord.com/invite/8THD78p4Qu">discord.gg/8THD78p4Qu</a></li>
+            <li>Page Linkedin : <a href="https://www.linkedin.com/company/fneir/">company/FNEIR</a></li>
+        </ul>
       </header>
 
       <section>
