--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,16 +24,14 @@
         <h4>Télécharger le logo</h4>
 
         <ul class="downloads">
-          <li><a download href="https://raw.githubusercontent.com/FNEIR/fneir.github.io/main/logos/Logo-FNEIR-Rect.png">Télécharger <strong  style="font-size: 12px; margin-top: 4px;">Logo PNG</strong></a></li>
-          <li><a download href="https://raw.githubusercontent.com/FNEIR/fneir.github.io/main/logos/Logo-FNEIR-Rect.min.svg">Télécharger <strong  style="font-size: 12px; margin-top: 4px;">Logo SVG</strong></a></li>
+          <li><a download href="./logos/Logo-FNEIR-Rect.png">Télécharger <strong  style="font-size: 12px; margin-top: 4px;">Logo PNG</strong></a></li>
+          <li><a download href="./logos/Logo-FNEIR-Rect.min.svg">Télécharger <strong  style="font-size: 12px; margin-top: 4px;">Logo SVG</strong></a></li>
           <li><a href="https://github.com/FNEIR/fneir.github.io/tree/main/logos">Voir <strong style="font-size: 10px; margin-top: 4px;">Autres logos</strong></a></li>
         </ul>
 
         <h4>Contact</h4>
-        <ul>
-            <li>Tchat Discord : <a href="https://discord.com/invite/8THD78p4Qu">discord.gg/8THD78p4Qu</a></li>
-            <li>Page Linkedin : <a href="https://www.linkedin.com/company/fneir/">company/FNEIR</a></li>
-        </ul>
+        <p>Tchat Discord : <a href="https://discord.com/invite/8THD78p4Qu">discord.gg/8THD78p4Qu</a></p>
+        <p>Page Linkedin : <a href="https://www.linkedin.com/company/fneir/">company/FNEIR</a></p>
       </header>
 
       <section>
@@ -44,9 +42,6 @@
     
       <footer>
         <div style="display: none;">
-            {% if site.github.is_project_page %}
-            <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-            {% endif %}
             <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
         </div>
       </footer>
